feat: add get list books

--- a/web-library/.eslintrc.json
+++ b/web-library/.eslintrc.json
@@ -47,7 +47,8 @@
       }
     ],
     "no-use-before-define": "off",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react/jsx-indent":"off"
   },
   "settings": {
     "import/resolver": {
