--- a/web-library/package.json
+++ b/web-library/package.json
@@ -15,8 +15,11 @@
     "react-debounce-input": "^3.2.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-svg-star-rating": "^1.1.5",
+    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
